Front end for dashboard added

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,7 +5,7 @@
 	<link rel="icon" type="image/png" href="assets/img/favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Trade Simulator Proposals</title>
+	<title>Trade Simulator Dashboard</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -45,12 +45,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/proposal">Proposals</a>
+                    <a class="navbar-brand" href="/dashboard">Dashboard</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="team/logout">
+                            <a href="/team/logout">
                                 Log out
                             </a>
                         </li>
