Front end for proposal added

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -66,8 +66,8 @@
                     <div class="col-md-4">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Email Statistics</h4>
-                                <p class="category">Last Campaign Performance</p>
+                                <h4 class="title">Commodities Statistics</h4>
+                                <p class="category">May you get great insights from this pie chart</p>
                             </div>
                             <div class="content">
                                 <div id="commodity_chart" class="ct-chart ct-perfect-fourth"></div>
