--- a/views/side-bar.ejs
+++ b/views/side-bar.ejs
@@ -1,4 +1,4 @@
-<div class="sidebar" data-color="purple" data-image="assets/img/sidebar-5.jpg">
+<div class="sidebar" data-color="purple" data-image="../assets/img/sidebar-5.jpg">
 
 <!--
 
@@ -13,8 +13,13 @@
                 <%= team._id %>
             </a>
         </div>
-
         <ul class="nav">
+          <li>
+              <a href="/proposal/create">
+                  <i class="pe-7s-graph"></i>
+                  <p>New Proposal</p>
+              </a>
+          </li>
             <li>
                 <a href="/dashboard">
                     <i class="pe-7s-graph"></i>
