Sets and proposals error redirection fixed

--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -141,7 +141,37 @@
 	<script src="../assets/js/demo.js"></script>
 
 	<script type="text/javascript">
+	var getUrlParameter = function getUrlParameter(sParam) {
+		var sPageURL = decodeURIComponent(window.location.search.substring(1)),
+				sURLVariables = sPageURL.split('&'),
+				sParameterName,
+				i;
 
+		for (i = 0; i < sURLVariables.length; i++) {
+				sParameterName = sURLVariables[i].split('=');
+
+				if (sParameterName[0] === sParam) {
+						return sParameterName[1] === undefined ? true : sParameterName[1];
+				}
+		}
+};
+	$(document).ready(function(){
+		if(getUrlParameter('error') && getUrlParameter('msg')){
+			$.notify({
+					message: getUrlParameter('msg')
+				},{
+						type: 'danger',
+						timer: 4000
+				});
+		}else if (getUrlParameter('msg')) {
+			$.notify({
+					message: getUrlParameter('msg')
+				},{
+						type: 'success',
+						timer: 4000
+				});
+		}
+	})
 	</script>
 </body>
 </html>
