--- a/views/side-bar.ejs
+++ b/views/side-bar.ejs
@@ -16,7 +16,7 @@
         <ul class="nav">
           <li>
               <a href="/proposal/create">
-                  <i class="pe-7s-graph"></i>
+                  <i class="pe-7s-file"></i>
                   <p>New Proposal</p>
               </a>
           </li>
@@ -34,7 +34,7 @@
             </li>
             <li>
                 <a href="/sets">
-                    <i class="pe-7s-user"></i>
+                    <i class="pe-7s-copy-file"></i>
                     <p>Sets</p>
                 </a>
             </li>
