--- a/views/side-bar.ejs
+++ b/views/side-bar.ejs
@@ -38,6 +38,12 @@
                     <p>Sets</p>
                 </a>
             </li>
+            <li>
+                <a href="/logs">
+                    <i class="pe-7s-copy-file"></i>
+                    <p>Trade Logs</p>
+                </a>
+            </li>
         </ul>
   </div>
 </div>
