--- a/views/leaderboards.ejs
+++ b/views/leaderboards.ejs
@@ -5,7 +5,7 @@
 	<link rel="icon" type="image/png" href="../assets/img/favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Trade Simulator Proposals</title>
+	<title>Trade Simulator Leaderboards</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -34,6 +34,38 @@
 <body>
 
 <div class="wrapper">
+  <% Array.prototype.max = function(comparer) {
+
+    if (this.length === 0) return null;
+    if (this.length === 1) return this[0];
+
+    comparer = (comparer || Math.max);
+
+    var v = this[0];
+    for (var i = 1; i < this.length; i++) {
+        v = comparer(this[i], v);
+    }
+
+    return v;
+}
+Array.prototype.maxid = function(comparer) {
+
+  if (this.length === 0) return null;
+  if (this.length === 1) return 0;
+
+  comparer = (comparer || Math.max);
+
+  var v = this[0];
+  var id = 0
+  for (var i = 1; i < this.length; i++) {
+      if(v<this[i]){
+        v = this[i]
+        id=i;
+      }
+  }
+
+  return id;
+}%>
 <%- include side-bar.ejs %>
     <div class="main-panel">
         <nav class="navbar navbar-default navbar-fixed">
@@ -45,7 +77,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/proposal">Proposals</a>
+                    <a class="navbar-brand" href="/proposal">Leaderboards</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -63,81 +95,39 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-
-									<% if(proposals.length >0){
-										for(var i=0;i<proposals.length;i++){
-										proposal = proposals[i]%>
 										<div class="col-md-6">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Trade Request from <%=proposal.by%></h4>
+                                <h4 class="title">Hall Of Fame</h4>
                             </div>
                             <div class="content">
                                 <div class="row">
-																	<div class="col-md-6">
-																		<h6>You give</h6>
+																	<div class="col-md-12">
 																		<table class="table table-hover table-striped">
 																			<thead>
-																				<th>Commodity</th>
-																				<th>Quantity</th>
+                                        <th>Rank</th>
+																				<th>Team</th>
+																				<th>Sets</th>
+                                        <th>Net Worth</th>
 																			</thead>
 																			<tbody>
-																				<%for(var i = 0;i<commodity_list.length;i++){
-																					commodity = commodity_list[i]%>
-																					<tr>
-																						<td><%= commodity.toUpperCase()%></td>
-																						<td><%= proposal.want_commodities[commodity]%></td>
-																					</tr>
-																				<%}%>
+                                        <% for(var i=0;i<teams.length;i++){
+                                          curr_team = teams[i];
+                                          if(curr_team._id != 'admin'){%>
+                                          <tr>
+                                            <td><%=i+1%></td>
+                                            <td><%=curr_team._id%></td>
+                                            <td><%=curr_team.sets.max()%> ( Set <%=curr_team.sets.maxid()%>)</td>
+                                            <td><%=curr_team.net_worth%></td>
+                                          </tr>
+                                        <%}}%>
 																			</tbody>
 																		</table>
-																		<center>
-																			<a href="/proposal/<%=proposal._id%>/accept">
-																				<button type="button" class='btn btn-success btn-fill'>Accept</button>
-																			</a>
-																		</center>
-																	</div>
-																	<div class="col-md-6">
-																		<h6>You receive</h6>
-																		<table class="table table-hover table-striped">
-																			<thead>
-																				<th>Commodity</th>
-																				<th>Quantity</th>
-																			</thead>
-																			<tbody>
-																				<%for(var i = 0;i<commodity_list.length;i++){
-																					commodity = commodity_list[i]%>
-																					<tr>
-																						<td><%= commodity.toUpperCase()%></td>
-																						<td><%= proposal.give_commodities[commodity]%></td>
-																					</tr>
-																				<%}%>
-																			</tbody>
-																		</table>
-																		<center>
-																			<a href="/proposal/<%=proposal._id%>/reject">
-																				<button type="button" class='btn btn-danger btn-fill'>Reject</button>
-																			</a>
-																	</center>
 																	</div>
                                 </div>
                             </div>
                         </div>
                     </div>
-									<%}}else{%>
-										<div class="col-md-6">
-											<div class="card">
-												<div class="header">
-													Proposals
-												</div>
-												<div class="content">
-													<p>
-														You don't have any pending requests
-													</p>
-												</div>
-											</div>
-										</div>
-									<%}%>
                 </div>
             </div>
         </div>
