--- a/views/logs.ejs
+++ b/views/logs.ejs
@@ -5,7 +5,7 @@
 	<link rel="icon" type="image/png" href="../assets/img/favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Trade Simulator Proposals</title>
+	<title>Trade Simulator Trade Logs</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -45,7 +45,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/proposal">Proposals</a>
+                    <a class="navbar-brand" href="/proposal">Trade Logs</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -66,24 +66,25 @@
 
 									<% if(proposals.length >0){
 										for(var i=0;i<proposals.length;i++){
-										proposal = proposals[i]%>
+										proposal = proposals[i];
+                    if(proposal.to == team._id){%>
 										<div class="col-md-6">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Trade Request from <%=proposal.by%></h4>
+                                <h4 class="title">Request by <%=proposal.by%></h4>
                             </div>
                             <div class="content">
                                 <div class="row">
 																	<div class="col-md-6">
-																		<h6>You give</h6>
+																		<h6>You gave</h6>
 																		<table class="table table-hover table-striped">
 																			<thead>
 																				<th>Commodity</th>
 																				<th>Quantity</th>
 																			</thead>
 																			<tbody>
-																				<%for(var i = 0;i<commodity_list.length;i++){
-																					commodity = commodity_list[i]%>
+																				<%for(var j = 0;j<commodity_list.length;j++){
+																					commodity = commodity_list[j]%>
 																					<tr>
 																						<td><%= commodity.toUpperCase()%></td>
 																						<td><%= proposal.want_commodities[commodity]%></td>
@@ -91,22 +92,17 @@
 																				<%}%>
 																			</tbody>
 																		</table>
-																		<center>
-																			<a href="/proposal/<%=proposal._id%>/accept">
-																				<button type="button" class='btn btn-success btn-fill'>Accept</button>
-																			</a>
-																		</center>
 																	</div>
 																	<div class="col-md-6">
-																		<h6>You receive</h6>
+																		<h6>You received</h6>
 																		<table class="table table-hover table-striped">
 																			<thead>
 																				<th>Commodity</th>
 																				<th>Quantity</th>
 																			</thead>
 																			<tbody>
-																				<%for(var i = 0;i<commodity_list.length;i++){
-																					commodity = commodity_list[i]%>
+																				<%for(var j = 0;j<commodity_list.length;j++){
+																					commodity = commodity_list[j]%>
 																					<tr>
 																						<td><%= commodity.toUpperCase()%></td>
 																						<td><%= proposal.give_commodities[commodity]%></td>
@@ -114,25 +110,68 @@
 																				<%}%>
 																			</tbody>
 																		</table>
-																		<center>
-																			<a href="/proposal/<%=proposal._id%>/reject">
-																				<button type="button" class='btn btn-danger btn-fill'>Reject</button>
-																			</a>
-																	</center>
 																	</div>
                                 </div>
                             </div>
                         </div>
                     </div>
-									<%}}else{%>
+									<%}else{%>
+										<div class="col-md-6">
+												<div class="card">
+														<div class="header">
+																<h4 class="title">Request to <%=proposal.to%></h4>
+														</div>
+														<div class="content">
+																<div class="row">
+																	<div class="col-md-6">
+																		<h6>You gave</h6>
+																		<table class="table table-hover table-striped">
+																			<thead>
+																				<th>Commodity</th>
+																				<th>Quantity</th>
+																			</thead>
+																			<tbody>
+																				<%for(var j = 0;j<commodity_list.length;j++){
+																					commodity = commodity_list[j]%>
+																					<tr>
+																						<td><%= commodity.toUpperCase()%></td>
+																						<td><%= proposal.give_commodities[commodity]%></td>
+																					</tr>
+																				<%}%>
+																			</tbody>
+																		</table>
+																	</div>
+																	<div class="col-md-6">
+																		<h6>You received</h6>
+																		<table class="table table-hover table-striped">
+																			<thead>
+																				<th>Commodity</th>
+																				<th>Quantity</th>
+																			</thead>
+																			<tbody>
+																				<%for(var j = 0;j<commodity_list.length;j++){
+																					commodity = commodity_list[j]%>
+																					<tr>
+																						<td><%= commodity.toUpperCase()%></td>
+																						<td><%= proposal.want_commodities[commodity]%></td>
+																					</tr>
+																				<%}%>
+																			</tbody>
+																		</table>
+																	</div>
+																</div>
+														</div>
+												</div>
+										</div>
+									<%}}}else{%>
 										<div class="col-md-6">
 											<div class="card">
 												<div class="header">
-													Proposals
+													Trade Logs
 												</div>
 												<div class="content">
 													<p>
-														You don't have any pending requests
+														You don't have any trade log
 													</p>
 												</div>
 											</div>
