--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -103,8 +103,16 @@
 																		</tr>
 																	<%}}%>
 																	<tr>
-																		<td></td><td></td><td>Net Worth</td>
-																		<td><%= team.net_worth %></td>
+																		<td></td>
+																		<td></td>
+																		<td></td>
+																		<td></td>
+																	</tr>
+																	<tr>
+																		<td><strong>Cash Available</strong></td>
+																		<td><strong><%= team.commodities['cash']%></strong></td>
+																		<td><strong>Net Worth</strong></td>
+																		<td><strong><%= team.net_worth %></strong></td>
 																	</tr>
 																	</tbody>
 															</table>
