--- a/views/new_proposal.ejs
+++ b/views/new_proposal.ejs
@@ -45,7 +45,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/proposal">New Proposal</a>
+                    <a class="navbar-brand" href="/new_proposal">New Proposal</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
