--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -45,7 +45,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/proposal">Sets</a>
+                    <a class="navbar-brand" href="/sets">Sets</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
