--- a/views/side-bar.ejs
+++ b/views/side-bar.ejs
@@ -61,6 +61,12 @@
                   </a>
               </li>
               <%}%>
+              <li>
+                  <a href="#">
+                      <p style="font-size:150%"><%=timer.text%></p><br>
+                      <span id='time_remaining' style="font-size:200%"></span>
+                  </a>
+              </li>
         </ul>
   </div>
 </div>
