--- a/views/proposal.ejs
+++ b/views/proposal.ejs
@@ -203,6 +203,51 @@
 						timer: 4000
 				});
 		}
+		var getTimeRemaining = function(endtime){
+		var now = new Date();
+			var t = Date.parse(endtime) - Date.parse(now);
+			var seconds = Math.floor( (t/1000) % 60 );
+			var minutes = Math.floor( (t/1000/60) % 60 );
+			var hours = Math.floor( (t/(1000*60*60)) % 24 );
+			var days = Math.floor( t/(1000*60*60*24) );
+
+			if(t<=0){
+				return {
+					'total': 0,
+					'days': 0,
+					'hours': 0,
+					'minutes': 0,
+					'seconds': 0
+				};
+			}else{
+				return {
+					'total': t,
+					'days': days,
+					'hours': hours,
+					'minutes': minutes,
+					'seconds': seconds
+				};
+			}
+		}
+		function initializeClock(id, endtime){
+			var clock = document.getElementById(id);
+			function updateClock(){
+				var t = getTimeRemaining(endtime);
+				clock.innerHTML =
+													('0' + t.hours).slice(-2) + ':' +
+													('0' + t.minutes).slice(-2) + ':' +
+												 ('0' + t.seconds).slice(-2);
+				if(t.total<=0){
+					clearInterval(timeinterval);
+				}
+			}
+			updateClock()
+			var timeinterval = setInterval(updateClock,1000);
+		}
+		<% if(typeof timer != 'undefined'){ %>
+			var end = '<%=timer.end_time%>'
+			initializeClock('time_remaining',end);
+		<%}%>
 	})
 	</script>
 </body>
